visibility fix

--- a/accets/sys/css/style.css
+++ b/accets/sys/css/style.css
@@ -2,7 +2,7 @@
 {
     background-image: url("arts/header.png");
     background-color: #d9edff;
-    background-repeat: no-repeat;
+    background-repeat: repeat-x;
 }
 body
 {
@@ -13,7 +13,11 @@ body
 {
     color: #0088ff;
 }
-a.btn, h1.project-name, h2.project-tagline
+a.btn
 {
     display: none;
+}
+h1.project-name, h2.project-tagline
+{
+    visibility: hidden;
 }
